force-app/main/default/objects/Product2/fields/numm__Quantit_res__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_res__c</fullName>
    <label>Quantité réservée en stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>