force-app/main/default/objects/Product2/fields/numm__Tech_Gerer_en_Stock__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Gerer_en_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Géré en Stock</label>
    <type>Checkbox</type>
</CustomField>