force-app/main/default/objects/Product2/fields/Periodicity__c.field-meta.xml
<CustomField>
    <fullName>Periodicity__c</fullName>
    <label>Périodicité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <label>Mensuelle</label>
            </value>
            <value>
                <fullName>Annual</fullName>
                <label>Annuelle</label>
            </value>
            <value>
                <fullName>Unitary</fullName>
                <label>Unitaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>